<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.unmadesai.kardiacare4.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/tx1"
            android:layout_alignParentLeft="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx1"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/tx2"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx2"
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_bn_label"
            android:layout_below="@id/pass"
            style="@android:style/TextAppearance.Small"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:id="@+id/loginbtn"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New user"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:gravity="center"
                android:background="@color/colorPrimaryDark"
                android:layout_alignParentBottom="true"
                android:id="@+id/signup2"


                />

        </RelativeLayout>



    </RelativeLayout>

</LinearLayout>
